--- a/styles/media-ateismo.css
+++ b/styles/media-ateismo.css
@@ -326,6 +326,12 @@
         display: table-cell;
         vertical-align: middle;
     }
+    #tela-final {
+        height: 100vh;
+    }
+    #mensagem-final {
+        height: 100vh;
+    }
     .tooltip {
         position: relative;
     }
