--- a/styles/style-ateismo.css
+++ b/styles/style-ateismo.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} 
+}
 
 html {
     overflow-y: scroll;
@@ -15,7 +15,7 @@ body {
 }
 
 .pagina {
-    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
+    background-image: url("../imagens/pano-de-fundo.jpg");
     background-color: rgb(200, 187, 172);
     background-size: contain;
     max-width: 800px;
@@ -32,6 +32,7 @@ h3 {
     color: brown;
     display: inline;
 }
+
 h4 {
     /* título */
     font-size: 3rem;
@@ -39,73 +40,95 @@ h4 {
     color: rgb(54, 49, 34);
     text-align: center;
 }
+
 hr {
     border-color: rgb(70, 7, 3);
     border-width: 3px;
     box-shadow: 3px 3px 4px rgb(78, 95, 95);
     margin: 2% auto;
 }
-#perfil{
+
+#perfil {
     width: 350%;
-}  
-#texto-perfil{
+}
+
+#texto-perfil {
     padding: 2% 4% 0 2%;
     text-align: justify;
 }
+
 #quadro1 {
     display: flex;
     position: relative;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#quadro2{
+
+#quadro2 {
     position: relative;
     padding: 1% 5% 0 5%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
 #imgQ2 {
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#quadro3{
+
+#quadro3 {
     position: relative;
     padding: 1% 5% 0 5%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
 p {
     margin: 1% auto;
     text-align: center;
     font-weight: bold;
 }
-#quadro4{
+
+#quadro4 {
     position: relative;
     padding: 3% 5%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
 #imgQ4 {
     scroll-snap-stop: always;
     scroll-snap-align: start;
     width: 100%;
 }
-#tela-final {
-    display: none;
+
+#opcoes {
+    width: 90%;
+    margin: auto;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
 }
+
+.opcao {
+    width: 100%;
+}
+
 #link {
     margin: auto;
     background-color: Transparent;
     border: none;
-    cursor:pointer;
-    overflow: hidden; 
+    cursor: pointer;
+    overflow: hidden;
 }
+
+#tela-final {
+    display: none;
+    scroll-snap-align: start;
+}
+
 #mensagem-final {
     width: 100%;
 }
@@ -113,6 +136,7 @@ p {
 .tooltip {
     display: inline-block;
 }
+
 .tooltip .tooltip1 {
     z-index: 2;
     visibility: hidden;
@@ -128,9 +152,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip1 {
     visibility: visible;
 }
+
 .tooltip .tooltip2 {
     z-index: 2;
     visibility: hidden;
@@ -146,9 +172,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip2 {
     visibility: visible;
 }
+
 .tooltip .tooltip3 {
     z-index: 2;
     visibility: hidden;
@@ -164,9 +192,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip3 {
     visibility: visible;
 }
+
 .tooltip .tooltip4 {
     z-index: 2;
     visibility: hidden;
@@ -182,9 +212,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip4 {
     visibility: visible;
 }
+
 .tooltip .tooltip5 {
     z-index: 2;
     visibility: hidden;
@@ -200,9 +232,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip5 {
     visibility: visible;
 }
+
 .tooltip .tooltip6 {
     z-index: 2;
     visibility: hidden;
@@ -218,9 +252,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip6 {
     visibility: visible;
 }
+
 .tooltip .tooltip7 {
     z-index: 2;
     visibility: hidden;
@@ -236,9 +272,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip7 {
     visibility: visible;
 }
+
 .tooltip .tooltip8 {
     z-index: 2;
     visibility: hidden;
@@ -254,9 +292,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip8 {
     visibility: visible;
 }
+
 .tooltip .tooltip9 {
     z-index: 2;
     visibility: hidden;
@@ -272,9 +312,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip9 {
     visibility: visible;
 }
+
 .tooltip .tooltip10 {
     z-index: 2;
     visibility: hidden;
@@ -290,9 +332,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip10 {
     visibility: visible;
 }
+
 .tooltip .tooltip11 {
     z-index: 2;
     visibility: hidden;
@@ -308,15 +352,7 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip11 {
     visibility: visible;
-}
-#opcoes {
-    width: 90%;
-    margin: auto;
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
-}
-.opcao{
-    width: 100%;
 }
