--- a/styles/style-deismo.css
+++ b/styles/style-deismo.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} 
+}
 
 html {
     overflow-y: scroll;
@@ -15,7 +15,7 @@ body {
 }
 
 .pagina {
-    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
+    background-image: url("../imagens/pano-de-fundo.jpg");
     background-color: rgb(200, 187, 172);
     background-size: contain;
     max-width: 800px;
@@ -39,13 +39,16 @@ h3 {
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#perfil{
+
+#perfil {
     width: 355%;
-}  
-#texto-perfil{
+}
+
+#texto-perfil {
     padding: 3% 4%;
     text-align: justify;
 }
+
 h4 {
     /* título */
     font-size: 3rem;
@@ -53,6 +56,7 @@ h4 {
     color: rgb(54, 49, 34);
     text-align: center;
 }
+
 hr {
     border-color: rgb(70, 7, 3);
     border-width: 3px;
@@ -60,37 +64,52 @@ hr {
     margin: 2% auto;
 }
 
-#quadro2{
+#quadro2 {
     position: relative;
     padding: 3% 5%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#quadro3{
+
+#quadro3 {
     position: relative;
     padding: 3% 5%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#imgQ4{
+
+#imgQ4 {
     width: 100%;
     scroll-snap-align: start;
     box-sizing: border-box;
 }
+
+#opcoes {
+    width: 90%;
+    margin: auto;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+
+.opcao {
+    width: 100%;
+}
+
 #tela-final {
     display: none;
+    scroll-snap-align: start;
 }
+
 #link {
     margin: auto;
     background-color: Transparent;
     border: none;
-    cursor:pointer;
-    overflow: hidden; 
+    cursor: pointer;
+    overflow: hidden;
 }
+
 #mensagem-final {
     width: 100%;
 }
@@ -98,6 +117,7 @@ hr {
 .tooltip {
     display: inline-block;
 }
+
 .tooltip .tooltip1 {
     z-index: 2;
     visibility: hidden;
@@ -113,9 +133,11 @@ hr {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip1 {
     visibility: visible;
 }
+
 .tooltip .tooltip2 {
     z-index: 2;
     visibility: hidden;
@@ -131,9 +153,11 @@ hr {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip2 {
     visibility: visible;
 }
+
 .tooltip .tooltip3 {
     z-index: 2;
     visibility: hidden;
@@ -149,9 +173,11 @@ hr {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip3 {
     visibility: visible;
 }
+
 .tooltip .tooltip4 {
     z-index: 2;
     visibility: hidden;
@@ -167,9 +193,11 @@ hr {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip4 {
     visibility: visible;
 }
+
 .tooltip .tooltip5 {
     z-index: 2;
     visibility: hidden;
@@ -185,15 +213,7 @@ hr {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip5 {
     visibility: visible;
-}
-#opcoes {
-    width: 90%;
-    margin: auto;
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
-}
-.opcao{
-    width: 100%;
 }
