--- a/styles/style-gnosticismo.css
+++ b/styles/style-gnosticismo.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} 
+}
 
 html {
     overflow-y: scroll;
@@ -15,7 +15,7 @@ body {
 }
 
 .pagina {
-    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
+    background-image: url("../imagens/pano-de-fundo.jpg");
     background-color: rgb(200, 187, 172);
     background-size: contain;
     max-width: 800px;
@@ -39,13 +39,16 @@ h3 {
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#perfil{
+
+#perfil {
     width: 265%;
-}  
-#texto-perfil{
+}
+
+#texto-perfil {
     padding: 2% 5% 0 3%;
     text-align: justify;
 }
+
 h4 {
     /* título */
     font-size: 3rem;
@@ -53,6 +56,7 @@ h4 {
     color: rgb(54, 49, 34);
     text-align: center;
 }
+
 hr {
     border-color: rgb(70, 7, 3);
     border-width: 3px;
@@ -60,7 +64,7 @@ hr {
     margin: 2% auto;
 }
 
-#quadro2{
+#quadro2 {
     display: grid;
     grid-template-columns: 32% 7% 61%;
     grid-template-rows: 123px 252px;
@@ -68,16 +72,19 @@ hr {
     scroll-snap-align: start;
     position: relative;
 }
-#caixa-quadro2A{
+
+#caixa-quadro2A {
     grid-area: 1 / 2 / span 1 / span 2;
     padding: 2% 7% 0 2%;
     text-align: justify;
 }
-#caixa-quadro2B{
+
+#caixa-quadro2B {
     grid-area: 2 / 3 / span 1 / span 1;
     padding: 0 7% 0 0;
     text-align: justify;
 }
+
 #imgQ2 {
     grid-area: 1 / 1 / span 3 / span 2;
     width: 100%;
@@ -85,20 +92,22 @@ hr {
     bottom: 0;
 }
 
-#quadro3{
+#quadro3 {
     display: grid;
     position: relative;
     grid-template-columns: 76% 24%;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#caixa-quadro3A{
+
+#caixa-quadro3A {
     grid-area: 1 / 1 / span 1 / span 1;
     position: relative;
     padding: 1% 0 0 6%;
     text-align: justify;
 }
-#caixa-quadro3B{
+
+#caixa-quadro3B {
     grid-area: 2 / 1 / span 1 / span 1;
     position: relative;
     padding: 2% 14% 2% 12%;
@@ -106,30 +115,36 @@ hr {
     font-weight: bold;
     line-height: 2.5rem;
 }
+
 #caixa-quadro3C {
     grid-area: 3 / 1 / span 1 / span 2;
     position: relative;
     padding: 1% 5% 0 5%;
     text-align: justify;
 }
+
 #imgQ3 {
     grid-area: 1 / 2 / span 2 / span 1;
     width: 95%;
     position: absolute;
     right: 0;
 }
+
 #quadro4 {
     scroll-snap-stop: always;
     scroll-snap-align: start;
     position: relative;
     text-align: justify;
 }
+
 #caixa-quadro4 {
     padding: 1% 5% 0 5%;
 }
+
 p {
     padding: 1% 10%;
 }
+
 #quadro5 {
     scroll-snap-stop: always;
     scroll-snap-align: start;
@@ -137,19 +152,35 @@ p {
     padding: 2% 5% 0 5%;
     text-align: justify;
 }
+
 #imgQ5 {
     width: 100%;
 }
+
+#opcoes {
+    width: 90%;
+    margin: auto;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+
+.opcao {
+    width: 100%;
+}
+
 #tela-final {
     display: none;
+    scroll-snap-align: start;
 }
+
 #link {
     margin: auto;
     background-color: Transparent;
     border: none;
-    cursor:pointer;
-    overflow: hidden; 
+    cursor: pointer;
+    overflow: hidden;
 }
+
 #mensagem-final {
     width: 100%;
 }
@@ -158,6 +189,7 @@ p {
     display: inline-block;
     line-height: 20px;
 }
+
 .tooltip1 {
     z-index: 2;
     visibility: hidden;
@@ -172,9 +204,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip1 {
     visibility: visible;
 }
+
 .tooltip2 {
     z-index: 2;
     visibility: hidden;
@@ -189,9 +223,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip2 {
     visibility: visible;
 }
+
 .tooltip3 {
     z-index: 2;
     visibility: hidden;
@@ -206,9 +242,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip3 {
     visibility: visible;
 }
+
 .tooltip4 {
     z-index: 2;
     visibility: hidden;
@@ -223,9 +261,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip4 {
     visibility: visible;
 }
+
 .tooltip5 {
     z-index: 2;
     visibility: hidden;
@@ -240,9 +280,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip5 {
     visibility: visible;
 }
+
 .tooltip6 {
     z-index: 2;
     visibility: hidden;
@@ -257,9 +299,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip6 {
     visibility: visible;
 }
+
 .tooltip7 {
     z-index: 2;
     visibility: hidden;
@@ -274,9 +318,11 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip7 {
     visibility: visible;
 }
+
 .tooltip8 {
     z-index: 2;
     visibility: hidden;
@@ -292,16 +338,7 @@ p {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip8 {
     visibility: visible;
-}
-
-#opcoes {
-    width: 90%;
-    margin: auto;
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
-}
-.opcao{
-    width: 100%;
 }
