--- a/styles/style-teismo.css
+++ b/styles/style-teismo.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} 
+}
 
 html {
     overflow-y: scroll;
@@ -15,7 +15,7 @@ body {
 }
 
 .pagina {
-    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
+    background-image: url("../imagens/pano-de-fundo.jpg");
     background-color: rgb(200, 187, 172);
     background-size: contain;
     max-width: 800px;
@@ -33,20 +33,22 @@ h3 {
     display: inline;
 }
 
-#perfil{
+#perfil {
     width: 324%;
-}  
+}
+
 #quadro1 {
     display: flex;
     position: relative;
     scroll-snap-align: start;
     box-sizing: border-box;
 }
-#texto-perfil{
+
+#texto-perfil {
     padding: 3% 5% 0 2%;
     text-align: justify;
-    text-justify: inter-word;
 }
+
 h4 {
     /* título */
     font-size: 3.3rem;
@@ -54,6 +56,7 @@ h4 {
     color: rgb(54, 49, 34);
     text-align: center;
 }
+
 hr {
     border-color: rgb(70, 7, 3);
     border-width: 3px;
@@ -61,66 +64,90 @@ hr {
     margin: 2% auto;
     width: 100%;
 }
+
 #quadro2 {
     position: relative;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
 #caixa-quadro2 {
     position: relative;
     padding: 1% 7% 0 4%;
     text-align: justify;
     line-height: 2.5rem;
 }
+
 #imgQ2 {
     width: 100%;
 }
+
 #quadro3 {
     position: relative;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
 #caixa-quadro3 {
     position: relative;
     padding: 1% 5% 0 5%;
     text-align: justify;
     line-height: 2.5rem;
 }
+
 #imgQ3 {
     width: 100%;
 }
+
 #quadro4 {
     position: relative;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
 #caixa-quadro4 {
     position: relative;
     padding: 1% 5% 0 5%;
     text-align: justify;
     line-height: 2.5rem;
 }
+
 #imgQ4 {
     width: 100%;
 }
+
 #quadro5 {
     position: relative;
     padding: 1% 5%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
+#opcoes {
+    width: 90%;
+    margin: auto;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+
+.opcao {
+    width: 100%;
+}
+
 #tela-final {
     display: none;
+    scroll-snap-align: start;
 }
+
 #link {
     margin: auto;
     background-color: Transparent;
     border: none;
-    cursor:pointer;
-    overflow: hidden; 
+    cursor: pointer;
+    overflow: hidden;
 }
+
 #mensagem-final {
     width: 100%;
 }
@@ -128,6 +155,7 @@ hr {
 .tooltip {
     display: inline-block;
 }
+
 .tooltip .tooltip1 {
     z-index: 2;
     visibility: hidden;
@@ -143,9 +171,11 @@ hr {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip1 {
     visibility: visible;
 }
+
 .tooltip .tooltip2 {
     z-index: 2;
     visibility: hidden;
@@ -161,16 +191,7 @@ hr {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip2 {
     visibility: visible;
-}
-
-#opcoes {
-    width: 90%;
-    margin: auto;
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
-}
-.opcao{
-    width: 100%;
 }
