--- a/styles/style-pagina2.css
+++ b/styles/style-pagina2.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} 
+}
 
 html {
     overflow-y: scroll;
@@ -15,7 +15,7 @@ body {
 }
 
 .pagina {
-    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
+    background-image: url("../imagens/pano-de-fundo.jpg");
     background-color: rgb(160, 139, 114);
     background-size: cover;
     box-sizing: border-box;
@@ -34,45 +34,61 @@ h3 {
     display: inline;
 }
 
-#perfil{
+#perfil {
     width: 170%;
 }
-#texto-perfil{
+
+#texto-perfil {
     padding: 3% 5%;
     text-align: justify;
-    text-justify: inter-word;
 }
+
 #quadro1 {
     display: flex;
     position: relative;
     scroll-snap-align: start;
 }
+
 #quadro2 {
     position: relative;
-    padding: 2% 5% 0 5%;
+    padding: 2% 4% 0 4%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
 #quadro3 {
     position: relative;
-    padding: 2% 5%;
+    padding: 2% 4% 0 4%;
     text-align: justify;
-    text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
+
+#opcoes {
+    width: 90%;
+    margin: auto;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+
+.opcao {
+    width: 100%;
+}
+
 #tela-final {
     display: none;
+    scroll-snap-align: start;
 }
+
 #link {
     margin: auto;
     background-color: Transparent;
     border: none;
-    cursor:pointer;
-    overflow: hidden; 
+    cursor: pointer;
+    overflow: hidden;
 }
+
 #mensagem-final {
     width: 100%;
 }
@@ -80,6 +96,7 @@ h3 {
 .tooltip {
     display: inline-block;
 }
+
 .tooltip .tooltip1 {
     z-index: 2;
     visibility: hidden;
@@ -95,14 +112,16 @@ h3 {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip1 {
     visibility: visible;
 }
+
 .tooltip .tooltip2 {
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 392px;
+    left: 424px;
     bottom: 88px;
     padding: 0.5em;
     width: 250px;
@@ -113,15 +132,17 @@ h3 {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip2 {
     visibility: visible;
 }
+
 .tooltip .tooltip3 {
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 436px;
-    bottom: 178px;
+    left: 405px;
+    bottom: 161px;
     padding: 0.5em;
     width: 320px;
     line-height: 18px;
@@ -131,15 +152,17 @@ h3 {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip3 {
     visibility: visible;
 }
+
 .tooltip .tooltip4 {
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 422px;
-    bottom: 70px;
+    left: 398px;
+    bottom: 55px;
     padding: 0.5em;
     width: 200px;
     line-height: 18px;
@@ -149,19 +172,8 @@ h3 {
     border: 1px solid brown;
     background-color: LightGrey;
 }
+
 .tooltip:hover .tooltip4 {
     visibility: visible;
 }
-#opcoes {
-    width: 90%;
-    margin: auto;
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
-}
-.opcao{
-    width: 100%;
-}
-.opcaonula{
-    opacity: 30%;
-    bottom: -16px;
-}
+
